--- a/src/posts/published/break-out-your-component-logic-with-hooks/index.mdx
+++ b/src/posts/published/break-out-your-component-logic-with-hooks/index.mdx
@@ -8,8 +8,9 @@ relatedPostsSlugs: []
 ---
 
 import { FootnoteMarker as Marker } from '../../../components/Footnotes'
-import { WrappedTogglingItem } from './TogglingItem'
-import { WrappedExplicitItem } from './ExplicitItem'
+import OffsetWrap from '../../../components/OffsetWrap'
+import TogglingItem from './TogglingItem'
+import ExplicitItem from './ExplicitItem'
 import ItemsUsingCustomHook from './ItemsUsingCustomHook'
 
 Lately, I have had the opportunity to work on some new features at Webflow. It's exciting to build new things for your customers. It's _also_ exciting because I've had the opportunity to finally dive head-first into React Hooks and learn and explore some new patterns. Some have been winners, some have been losers, but the education has been a lot of fun, regardless.
@@ -39,7 +40,9 @@ function Item() {
 }
 ```
 
-<WrappedTogglingItem />
+<OffsetWrap>
+  <TogglingItem />
+</OffsetWrap>
 
 Great, our component works as expected.
 
@@ -73,7 +76,9 @@ function SimilarItem() {
 }
 ```
 
-<WrappedExplicitItem />
+<OffsetWrap>
+  <ExplicitItem />
+</OffsetWrap>
 
 That component works as well, but we've repeated quite a bit of code. In both examples, we're using essentially the same logic, deriving a different API from that logic, and exposing it to our UI. This seems like a great opportunity to abstract the logic away from our component to reduce duplication.
 
@@ -241,7 +246,9 @@ function SimilarItem() {
 }
 ```
 
-<ItemsUsingCustomHook />
+<OffsetWrap>
+  <ItemsUsingCustomHook />
+</OffsetWrap>
 
 Now, both our components consume the same interface, but have the freedom to use only the parts of that interface it requires and to rename parts of that functionality to reflect the context in which they are used. Not only that, but our individual components became smaller and a bit simpler to understand. We no longer have our logic tightly coupled to our component.
 
