fix a broken post

--- a/src/posts/published/experiment-write-a-simple-state-machine-as-a-string/index.mdx
+++ b/src/posts/published/experiment-write-a-simple-state-machine-as-a-string/index.mdx
@@ -256,7 +256,9 @@ function LightBulb() {
 
 And let's check it out here:
 
-<LightBulb />
+<OffsetWrap>
+  <LightBulb />
+</OffsetWrap>
 
 If you want to see this code and play around with it, you can check out this Codesandbox: [https://codesandbox.io/s/fsm-as-a-string-g3rcp](https://codesandbox.io/s/fsm-as-a-string-g3rcp)
 
