fix typos in memoization post

--- a/src/posts/published/memoization/index.mdx
+++ b/src/posts/published/memoization/index.mdx
@@ -14,7 +14,7 @@ import Factorializer from './Factorializer'
 
 Recently, I spent an hour with one of my protégés <Marker content={`"Mentee" is not a word. <a href="https://twitter.com/kyleshevlin/status/1253460305885016065?s=20">I've stated this before</a>.`} /> demonstrating some common advanced techniques we use at Webflow. One of the techniques I showed them was **memoization**. <Marker content="Not a typo." /> Let's learn what memoization is, why you might use it, and how do we write it from scratch.
 
-Memoization is a technique that enhances a function by creating and using a `cache` to store and retrieve results of that function. Memoizations uses the arguments of the function to create a `key` for the `cache`. The first time a memoized function is called with a set of arguments, those arguments are turned into a `key` and the result of the function is stored as the value at that `key`'s location in the `cache`. Then, on subsequent calls of the function with the same arguments, we can retrieve that previously calculated value from the `cache` and return it before we ever do the work of calculating the result. This improves the performance of our function, since hitting the `cache` is a constant time operation of `O(1)`.
+Memoization is a technique that enhances a function by creating and using a `cache` to store and retrieve results of that function. Memoization uses the arguments of the function to create a `key` for the `cache`. The first time a memoized function is called with a set of arguments, those arguments are turned into a `key` and the result of the function is stored as the value at that `key`'s location in the `cache`. Then, on subsequent calls of the function with the same arguments, we can retrieve that previously calculated value from the `cache` and return it before we ever do the work of calculating the result. This improves the performance of our function, since hitting the `cache` is a constant time operation of `O(1)`.
 
 We can use memoization on any [pure function](/just-enough-fp-pure-functions) and it's not too difficult to implement either. Let's create a [higher order function](/just-enough-fp-higher-order-functions) that will allow us to create a memoized version of a pure function.
 
@@ -102,7 +102,7 @@ Below, I've added a component that demonstrates how this works. With this compon
 
 ### Memoization and React
 
-I recognized a few years ago <Marker content={`And even mentioned it in a talk <a href="https://www.youtube.com/watch?t=2910&v=0QdUsOSt60s">here</a>.`} /> that React function components could be memoized. Of course, I wasn't forward thinking enough to recognize that this was a feature coming to React in the future. That said, memoizing in React is quite a bit different than memoizing a function like we have thus far. Rather than creating a large cache of many results, we can think of the caches in React's memoization
+I recognized a few years ago <Marker content={`And even mentioned it in a talk <a href="https://www.youtube.com/watch?t=2910&v=0QdUsOSt60s">here</a>.`} /> that React function components could be memoized. Of course, I wasn't forward thinking enough to recognize that this was a feature coming to React in the future. That said, memoizing in React is quite a bit different than memoizing a function like we have thus far. Rather than creating a large cache of many results, we can think of the caches in React's memoization as a cache of a single result.
 
 React now ships with two memoization mechanisms. The first, `React.memo`, is for memoizing function components as I just described. If the `props` don't change, the component won't rerender. This is the function equivalent of using the `PureComponent` class or implementing a shallow props check of `this.props === prevProps` in the `shouldComponentUpdate` lifecycle. I'd like to discuss `React.memo` further in a future post, so I'll save that conversation for there.
 
