write post on react memo

--- a/src/posts/published/memoization/index.mdx
+++ b/src/posts/published/memoization/index.mdx
@@ -6,7 +6,7 @@ subtitle: 'Trading Space for Time'
 description: ''
 excerpt: "Recently, I spent an hour with one of my protégés demonstrating some common advanced techniques we use at Webflow. One of the techniques I showed them was <strong>memoization</strong>. Let's learn what memoization is, why you might use it, and how do we write it from scratch."
 tags: ['JavaScript', 'React', 'Computer Science']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['using-react-memo-to-avoid-unnecessary-rerenders']
 ---
 
 import Adder from './Adder'
