Fix typo in three kinds of react state

--- a/src/posts/published/only-three-kinds-of-react-state/index.mdx
+++ b/src/posts/published/only-three-kinds-of-react-state/index.mdx
@@ -53,7 +53,7 @@ function Counter({ initialValue = 0 }) {
 
 ### Parentally
 
-The parental management of data happens when the data and its updaters are passed in as props from somewhere higher in the component tree. In the case of our counter, it's is as simple as moving the data and updating functions to a parent controlling component, and passing them in as props to a controlled child component.
+The parental management of data happens when the data and its updaters are passed in as props from somewhere higher in the component tree. In the case of our counter, it is as simple as moving the data and updating functions to a parent controlling component, and passing them in as props to a controlled child component.
 
 ```jsx
 function CounterController({ initialValue = 0 }) {
