fix small bugs with tic tac toe

--- a/src/posts/published/tic-tac-toe/index.mdx
+++ b/src/posts/published/tic-tac-toe/index.mdx
@@ -330,7 +330,7 @@ Now, our tic-tac-toe game looks like this:
   <SecondGame />
 </OffsetWrap>
 
-This is great. You, the reader and user can play, but it'd be really nice if they game told you if you won or not. Checking for win conditions is probably the most important part of creating a game like this (and is likely what the interviewer is looking for if you're asked to make a game like this).
+This is great. You, the reader and user can play, but it'd be really nice if the game told you if you won or not. Checking for win conditions is probably the most important part of creating a game like this (and is likely what the interviewer is looking for if you're asked to make a game like this).
 
 We need to create an efficient algorithm that checks for the game at each step for a win. What are the win conditions of tic-tac-toe?
 
