small tweaks to use effect post frontmatter

--- a/src/posts/published/mental-model-of-use-effect/index.mdx
+++ b/src/posts/published/mental-model-of-use-effect/index.mdx
@@ -1,11 +1,11 @@
 ---
 date: '2020-08-26'
 slug: 'mental-model-of-use-effect'
-title: 'Mental Model Of Use Effect'
+title: 'Mental Model of Use Effect'
 subtitle: null
-description: ''
+description: 'The React.useEffect hook can be challenging to get right. One way to easily mess it up is to incorrectly use the dependency array. This post demonstrates how to think about it correctly.'
 excerpt: null
-tags: ['React']
+tags: ['JavaScript', 'React']
 relatedPostsSlugs: []
 ---
 
