--- a/src/posts/published/pattern-matching/index.mdx
+++ b/src/posts/published/pattern-matching/index.mdx
@@ -33,7 +33,7 @@ let greeting = person =>
   }
 ```
 
-This mechanism quickly becomes the most robust way of doing conditional logic as you use the language. As you work with it, you get comfortable thinking in variants instead of thinging in `if/else`s or ternaries. But ReasonML's `switch` and JavaScript's `switch` are a bit different, so how can we recreate some of this magic in JavaScript?
+This mechanism quickly becomes the most robust way of doing conditional logic as you use the language. As you work with it, you get comfortable thinking in variants instead of thinking in `if/else`s or ternaries. But ReasonML's `switch` and JavaScript's `switch` are a bit different, so how can we recreate some of this magic in JavaScript?
 
 ### Flipping `switch` on its head
 
